cmake_minimum_required(VERSION 4.0)
project(untitled C)

set(CMAKE_C_STANDARD 23)

add_executable(untitled main.c
        "sheet 5/Q3.c"
        "sheet 5/Q4.c"
        "sheet 5/Q5.c"
        "sheet 5/Q6.c"
        "sheet 5/Q7.c"
        "sheet 5/Q8.c"
        "sheet 5/Q9.c"
        "sheet 5/Q10.c"
        "sheet 5/Q11.c"
        "sheet 5/Q12.c"
        "sheet 5/Q13.c"
        "sheet 5/Q14.c"
        "sheet 5/Q15.c"
        "sheet 5/Q16.c"
        "sheet 5/Q17.c"
        "sheet 5/Q18.c"
        "sheet 5/Q19.c"
        "sheet 5/Q20.c"
        "sheet 5/Q21.c"
        "sheet 5/Q22.c"
        "sheet 5/exa.c"
        "sheet 5/abdo.cpp"
)
